--- a/src/hello-world-configmap/templates/deployment.yaml
+++ b/src/hello-world-configmap/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         imagePullPolicy: Always
         env:
         - name: PORT
-          value: "80"
+          value: "{{ .app.port }}"
         - name: HELLOWORLD
           valueFrom:
             configMapKeyRef:
