--- a/src/hello-world-configmap/templates/ingress.yaml
+++ b/src/hello-world-configmap/templates/ingress.yaml
@@ -1,3 +1,5 @@
+{{- $ingress := .Values.ingress -}}
+{{- if $ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -16,8 +18,9 @@ spec:
           service:
             name: hello-world-configmap
             port:
-                number: 80
+                number: {{ .app.port }}
   tls:
   - secretName: hello-world.part6.xyz-tls
     hosts:
     - hello-world.part6.xyz
+{{- end }}
