--- a/src/hello-world-configmap/templates/deployment.yaml
+++ b/src/hello-world-configmap/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: hello-world-configmap
 spec:
-  replicas: 3
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: hello-world-configmap
@@ -16,11 +16,11 @@ spec:
     spec:
       containers:
       - name: hello-world-configmap
-        image: "enabledocker/hello-world-configmap:{{ .image.tag }}"
+        image: "enabledocker/hello-world-configmap:{{ .Values.image.tag }}"
         imagePullPolicy: Always
         env:
         - name: PORT
-          value: "{{ .app.port }}"
+          value: "{{ .Values.app.port }}"
         - name: HELLOWORLD
           valueFrom:
             configMapKeyRef:
