charted hello-world

--- a/src/hello-world-configmap/values.yaml
+++ b/src/hello-world-configmap/values.yaml
@@ -8,6 +8,6 @@ app:
   port: 8080
 
 ingress:
-    enabled: false
+    enabled: true
     ## List of hosts for the ingress
-    host: hello-world-configmap.n-able.xyz
+    host: hello-world.part6.xyz
