--- a/src/hello-world-configmap/templates/deployment.yaml
+++ b/src/hello-world-configmap/templates/deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: hello-world-configmap
 spec:
-  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: hello-world-configmap
@@ -16,7 +15,7 @@ spec:
     spec:
       containers:
       - name: hello-world-configmap
-        image: "enabledocker/hello-world-configmap:{{ .Values.image.tag }}"
+        image: "enabledocker/hello-world-configmap:1.0"
         imagePullPolicy: Always
         env:
         - name: PORT
